--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         <!-- 集成百度地图 -->
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="d3oVZFCBAqaGbpgj7PplNcY87CLIs2lT" />
+            android:value="jbIbW2cv5271kgLrdmTrUz7CL3B6DeFj"/>
+            <!--android:value="d3oVZFCBAqaGbpgj7PplNcY87CLIs2lT" />-->
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
