--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.NewsDetailActivity"></activity>
+        <activity android:name=".activity.NewsDetailActivity" />
+        <activity android:name=".activity.ProjectActivity"></activity>
     </application>
 
 </manifest>
